--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -26,7 +26,7 @@
 }
 
 .chrome:before {
-  content: '■■■■■■■■■■■■■■';
+  content: '■■■■■■■■■■■■■■■';
   position: absolute;
   left: 0;
   top: -80px;
